--- a/css/style.css
+++ b/css/style.css
@@ -399,7 +399,7 @@ footer {
 
 .home__title {
   margin: 0;
-  font-size: clamp(2.5rem, 1.932rem + 2.84vw, 4.063rem);
+  font-size: clamp(3.125rem, -5.125rem + 12vw, 3.875rem);
 }
 
 .no-webp .home__pic {
@@ -560,13 +560,20 @@ footer {
   margin-bottom: 10px;
 }
 
-.needs-slide__price {
+.needs-slide__cost {
+  display: flex;
+  align-items: flex-end;
+  gap: 5px;
+}
+
+.needs-slide__price-t {
   color: rgba(0, 0, 0, 0.6);
   font-size: 18px;
 }
 
-.needs-slide__price span {
+.needs-slide__price-c {
   color: black;
+  font-size: 18px;
   font-weight: 700;
 }
 
@@ -1185,6 +1192,10 @@ footer {
   .home__info {
     flex: 0 0 100%;
     margin: 15px 0px 0px 0px;
+  }
+
+  .home__title {
+    font-size: clamp(2.5rem, 1.905rem + 2.98vw, 3.75rem);
   }
 
   .home__pic {
