--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,7 @@ footer {
 
 .home {
   background: linear-gradient(to right, #CFDEF3, #E0EAFC);
-  height: 100vh;
+  height: 100svh;
 }
 
 .home__container {
